app/src/main/java/com/example/calcomanias_rocket/app/errors/ServerErrorUiModel.kt
package com.example.calcomanias_rocket.app.errors

class ServerErrorUiModel(private val onClick: (() -> Unit)? = null) : ErrorUiModel {
}